--- a/app.json
+++ b/app.json
@@ -36,6 +36,21 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "f5b4563d-9c6f-4450-86c5-c5d9e5f85fee"
+      }
+    },
+    "owner": "olha_sydorchuk",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f5b4563d-9c6f-4450-86c5-c5d9e5f85fee"
     }
   }
 }
